squash start game function bugs

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h2 {
     font-size: 20px;
     width: 190px;
     padding: 4px;
-    background-color: #1b9ed4;
+    background-color: #1e9c23;
     box-shadow: 5px 5px 2px #000000;
     border: 2px outset #f3f1f4;
     margin: 20px auto;
